--- a/res/layout/round_row.xml
+++ b/res/layout/round_row.xml
@@ -1,119 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/row"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row"    
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    >
-    <TextView 
-        android:id="@+id/HomeTeam"        
-        android:layout_width="0dp" 
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Netherlands"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:textSize="16sp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:gravity="right"
-        />
-    <TextView
-        android:layout_width="wrap_content" 
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:text=" - "
-        android:textSize="16sp"
-        android:gravity="right"
-        />
-    <TextView 
-        android:id="@+id/AwayTeam"        
-        android:layout_width="0dp" 
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Korea Republic"
-        android:maxLines="1"
-        android:scrollHorizontally="true"
-        android:textSize="16sp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        />
+    android:minHeight="40dp">
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
+
+        <TextView
+            android:id="@+id/teamsDivider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text=" - "
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/HomeTeam"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@id/teamsDivider"
+            android:layout_centerVertical="true"
+            android:gravity="right"
+            android:maxLines="1"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:scrollHorizontally="true"
+            android:text="Netherlands"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/AwayTeam"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/teamsDivider"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:maxLines="1"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:scrollHorizontally="true"
+            android:text="Korea Republic"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
     <ImageView
-        android:src="@drawable/joker"
         android:id="@+id/Joker"
         android:layout_width="wrap_content"
-        android:maxWidth="50dp"
-        android:maxHeight="50dp"
         android:layout_height="wrap_content"
+        android:contentDescription="joker"
+        android:maxHeight="50dp"
+        android:maxWidth="50dp"
         android:scaleType="centerInside"
-        />
-    <LinearLayout
-        android:id="@+id/PredScore"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginRight="5dp"
-        >
-	    <TextView
-	        android:id="@+id/HomePrediction"
-	        android:layout_width="18sp" 
-	        android:layout_height="wrap_content"
-	        android:gravity="right"
-	        android:layout_weight="0"
-	        android:text="3"
-	        android:textSize="16sp"
-	        />
-	    <TextView
-	        android:layout_width="wrap_content" 
-	        android:layout_height="wrap_content"
-	        android:layout_weight="0"
-	        android:text="-"
-	        android:textSize="16sp"
-	        />
-	    <TextView
-	        android:id="@+id/AwayPrediction"
-	        android:layout_width="18sp" 
-	        android:layout_height="wrap_content"
-	        android:layout_weight="0"
-	        android:text="0"
-	        android:textSize="16sp"
-	        />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/RealScore"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:layout_marginRight="5dp"
-        android:background="#FF7F7FFF"
-        >
-	    <TextView
-	        android:id="@+id/HomeReal"
-	        android:layout_width="18sp"
-	        android:layout_height="wrap_content"
-	        android:gravity="right"
-	        android:layout_weight="0"
-	        android:text="x"
-	        android:textSize="16sp"
-	        />
-	    <TextView
-	        android:layout_width="wrap_content" 
-	        android:layout_height="wrap_content"
-	        android:layout_weight="0"
-	        android:text="-"
-	        android:textSize="16sp"
-	        />
-	    <TextView
-	        android:id="@+id/AwayReal"
-	        android:layout_width="18sp" 
-	        android:layout_height="wrap_content"
-	        android:layout_weight="0"
-	        android:text="x"
-	        android:textSize="16sp"
-        />
-    </LinearLayout>
-</LinearLayout>
+        android:src="@drawable/joker" />
 
+    <RelativeLayout
+        android:id="@+id/PredScore"
+        android:layout_width="50dp"
+        android:layout_height="fill_parent"
+        android:layout_marginRight="5dp" >
+        
+        <TextView
+            android:id="@+id/predDivider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="-"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/HomePrediction"
+            android:layout_width="18sp"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/predDivider"
+            android:layout_centerVertical="true"
+            android:gravity="right"
+            android:text="3"
+            android:textSize="16sp" />        
+
+        <TextView
+            android:id="@+id/AwayPrediction"
+            android:layout_width="18sp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/predDivider"
+            android:layout_centerVertical="true"
+            android:text="0"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/RealScore"
+        android:layout_width="50dp"
+        android:layout_height="fill_parent"
+        android:background="#ff33b5e5"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/realDivider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="-"
+            android:textSize="16sp"
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/HomeReal"
+            android:layout_width="18sp"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/realDivider"
+            android:layout_centerVertical="true"            
+            android:gravity="right"
+            android:text="x"
+            android:textSize="16sp" 
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/AwayReal"
+            android:layout_width="18sp"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/realDivider"
+            android:layout_centerVertical="true"    
+            android:text="x"
+            android:textSize="16sp" 
+            android:textColor="@android:color/black" />
+    </RelativeLayout>
+
+</LinearLayout>
