--- a/res/layout/edit_dialog.xml
+++ b/res/layout/edit_dialog.xml
@@ -31,7 +31,9 @@
                 android:gravity="center_horizontal"
                 android:imeOptions="actionNext"
                 android:inputType="number"
-                android:lines="1" />
+                android:lines="1"
+                android:singleLine="true" />
+
         </TableRow>
 
         <TableRow
@@ -55,7 +57,9 @@
                 android:gravity="center_horizontal"
                 android:imeOptions="actionDone"
                 android:inputType="number"
-                android:lines="1" />
+                android:lines="1"
+                android:singleLine="true" />
+
         </TableRow>
 
         <TableRow
