--- a/res/menu/menu_standings.xml
+++ b/res/menu/menu_standings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item android:id="@+id/menu_prediction" android:title="@string/menu_my_prediction" android:showAsAction="ifRoom|withText"></item><item android:id="@+id/menu_sync" android:title="@string/menu_sync" android:showAsAction="ifRoom|withText" />
+    <item android:id="@+id/menu_prediction" android:title="@string/menu_my_prediction" android:showAsAction="ifRoom|withText"></item><item android:id="@+id/menu_refresh" android:title="@string/menu_refresh" android:showAsAction="ifRoom|withText" />
     
     <item
         android:id="@+id/menu_autosync_on"
